fixed overflow issue

--- a/src/components/styles/ProjectContainer.css
+++ b/src/components/styles/ProjectContainer.css
@@ -1,7 +1,3 @@
-.container {
-    overflow: hidden;
-}
-
 .wrapper {
     display: flex;
     flex-direction: column;
